--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "A simple helpful robot for your Company",
   "dependencies": {
     "hubot": "^2.16.0",
+    "hubot-decides": "0.0.7",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.2.2",
     "hubot-google-translate": "^0.2.0",
@@ -13,10 +14,14 @@
     "hubot-heroku-keepalive": "^1.0.0",
     "hubot-maps": "0.0.2",
     "hubot-pugme": "^0.1.0",
+    "hubot-qr": "0.0.2",
     "hubot-redis-brain": "0.0.3",
+    "hubot-remind-advanced": "0.0.2",
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
+    "hubot-spotify-playlist": "^0.1.0",
+    "hubot-weather": "^1.0.1",
     "hubot-xmpp": "^0.1.18"
   },
   "engines": {
