--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "maze@strahlungsfrei.de",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
+    "cheerio": "^0.19.0",
     "hubot": "^2.16.0",
     "hubot-decides": "0.0.7",
     "hubot-diagnostics": "0.0.1",
