Add setting to automatically add bot prefix when in 1on1 chat

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 HUBOT_XMPP_USERNAME=
 HUBOT_XMPP_PASSWORD=
 HUBOT_XMPP_ROOMS=
+HUBOT_XMPP_PM_ADD_PREFIX=1
 
 HUBOT_ADMIN_JID=
 SIS_PM_WEB_HOST=sis-pm-web
