Add matrix support

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,18 @@
+HUBOT_ADAPTER=xmpp
+HUBOT_LOG_LEVEL=debug
+
 HUBOT_XMPP_USERNAME=
 HUBOT_XMPP_PASSWORD=
 HUBOT_XMPP_ROOMS=
 HUBOT_XMPP_PM_ADD_PREFIX=1
+HUBOT_XMPP_ADMIN_JID=
 
-HUBOT_ADMIN_JID=
+#HUBOT_MATRIX_HOST_SERVER=
+#HUBOT_MATRIX_USER=
+#HUBOT_MATRIX_PASSWORD=
+#HUBOT_MATRIX_ADMIN_ID=
+
 SIS_PM_WEB_HOST=sis-pm-web
+HUBOT_OWM_APIKEY=
+HUBOT_SEARX_URL=
+HUBOT_SEARX_LANGUAGE=en_US
