--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "hubot-help": "^0.1.1",
     "hubot-heroku-keepalive": "^1.0.0",
     "hubot-maps": "0.0.2",
-    "hubot-matrix": "^1.2.0",
+    "hubot-matrix": "https://github.com/l4r-s/hubot-matrix",
     "hubot-pugme": "^0.1.0",
     "hubot-qr": "0.0.2",
     "hubot-redis-brain": "0.0.3",
